*About us page* Lightened about us background, added more readable styling for user. Changed project page file for seeing buttons until database fill be fixed

--- a/ionic-ui/src/app/pages/about/about.page.scss
+++ b/ionic-ui/src/app/pages/about/about.page.scss
@@ -14,7 +14,7 @@
 ion-content{
 //    --background:linear-gradient(135deg,rgba(164, 244, 250, 0.884),rgb(149, 248, 165),rgba(40, 192, 159, 0.863));
     --background: none;
-    background-image: url('/assets/background1.jpg');
+    background-image: url('/assets/background2.jpg');
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,29 +22,30 @@ ion-content{
 }
 
 ion-card{
-    background-color: rgba(82, 226, 106, 0.596);
+    background-color: rgba(146, 230, 158, 0.705);
     border-radius: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.185);
 }
-ion-textarea{
-    font-size: large;
-}
- p { 
+
+p { 
     color: #000000; 
     font-size: 25px; 
     font-family: "Libre Baskerville", serif; 
     line-height: 40px; 
     text-shadow: 0 1px 1px #fff; 
-    padding-top: 20px; 
+    padding-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
- ion-item{
+
+ion-item{
     --border-radius: 10px;
     --background-color: rgba(184, 236, 192, 0.767); 
- }
+}
  
- .error-message
+.error-message
 {
   color: red;
   font-size: 14px;
@@ -70,4 +71,16 @@ h1 {
     margin-top: 20px; 
     text-align: center; 
     text-shadow: 0 3px 3px rgb(34, 88, 57); 
+}
+
+ion-item-divider {
+    padding: 0px;
+    --background:linear-gradient(135deg,rgba(191, 238, 81, 0.849),rgba(146, 230, 158, 0.705));
+    display: inline-block;
+    max-width: 1320px;
+    border-radius: 20px;
+    margin-bottom: 5px; 
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px; 
 }
